<resources>
    <string name="app_name">RecordManager</string>
    <string name="all_records">All Records</string>
    <string name="records">All Records</string>
    <string name="new_record">New Record</string>
    <string name="add_record">Add Record</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="edit_record">Edit Record</string>
    <string name="submit_changes">Submit Changes</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="show_record">Show Record</string>
    <string name="name_required">Name is required.</string>
    <string name="delete_record">Are you sure you want to delete this record?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="date_created">Date Created</string>
    <string name="date_modified">Date Modified</string>
</resources>
