<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp">

    <TableRow

        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_marginTop="38dp"
            android:text="@string/show_record"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

    </TableRow>

    <TableRow
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingEnd="24dp"
            android:paddingStart="0dp"
            android:text="@string/name"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="0dp"

            android:layout_weight="1.5"
            android:textSize="18sp"
            tools:text="name" />

    </TableRow>

    <TableRow
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingEnd="16dp"
            android:paddingStart="10dp"
            android:text="@string/description"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            tools:text="description"
            android:textAlignment="viewStart"
            android:textSize="18sp" />
    </TableRow>

    <TableRow
        android:layout_marginBottom="8dp"

        android:gravity="center">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingEnd="16dp"
            android:paddingStart="0dp"
            android:text="@string/price"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:textSize="18sp"
            tools:text="price" />
    </TableRow>

    <TableRow
        android:layout_marginBottom="8dp"

        android:gravity="center">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingEnd="16dp"
            android:paddingStart="0dp"
            android:text="@string/date_modified"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDateModified"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:textSize="18sp"
            tools:text="date modified" />
    </TableRow>

    <TableRow
        android:layout_marginBottom="8dp"

        android:gravity="center">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingEnd="16dp"
            android:paddingStart="0dp"
            android:text="@string/date_created"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDateCreated"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:textSize="18sp"
            tools:text="date created" />
    </TableRow>

    <TableRow
        android:layout_marginBottom="16dp"
        android:gravity="center">

        <RatingBar
            android:id="@+id/rtbRating"
            style="@style/Widget.AppCompat.RatingBar"
            android:layout_width="wrap_content"

            android:isIndicator="true"
            android:numStars="5"
            android:stepSize="1" />

    </TableRow>

    <TableRow
            android:gravity="center"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        >

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginEnd="24dp"
            android:text="@string/delete"
            android:onClick="btnDeleteOnClick"
            />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/edit"
            android:onClick="btnEditOnClick"/>

    </TableRow>


</TableLayout>